Changes from java17 openrewrite recipe (#306)